<resources>
    <string name="app_name">好吃宝</string>
    <string name="cq">重庆</string>
    <string name="homepage_edittext">请输入地点、商家、美食</string>
    <string name="weather">有雾20°</string>
    <string name="tuijian">推荐</string>
    <string name="hudong">互动</string>
    <string name="qiuzhu">求助</string>
    <string name="yule">娱乐</string>
    <string name="jiudian">酒店</string>
    <string name="jindian">景点</string>introduce
    <string name="gouwu">购物</string>
    <string name="tingchechang">停车场</string>
    <string name="faxian">发现</string>
    <string name="shouye">首页</string>
    <string name="mine">我的</string>
    <string name="boomshakalaka">BoomShakalaka</string>
    <string name="time">30分钟前</string>
    <string name="hp_evaluate">对于我们这些吃货来说，任何妄图把大盘鸡拉条子羊肉串烤包子馕包肉哈密瓜葡萄干</string>
    <string name="shaxian">沙县大盘鸡</string>
    <string name="qudianpu">去店铺</string>
    <string name="introduce">大盘鸡是新疆的地区名菜，来源说法很多，真实的来源已无法考究...</string>
    <string name="comment_content">重庆火锅的材料就只有 盐蒜香菜醋香油 可是他们混在一起我就觉得完美 我以前调的都是什么鬼 晚上是的人还挺多的 地方还算大</string>
    <string name="chaffy_dish">火锅</string>
    <string name="self_help">自助</string>
    <string name="sichuan_dish">川菜</string>
    <string name="snack">小吃</string>
    <string name="nearby">附近</string>
    <string name="rank">排序</string>
    <string name="praise">好评</string>
    <string name="chenyanjinghuoguo">陈眼镜火锅(石油路店)</string>
    <string name="ziranweidaohuogou">自然谓道火锅</string>
    <string name="daping">大坪</string>
    <string name="gengduohuoguo">更多火锅</string>
    <string name="quguangguang">去逛逛</string>
    <string name="chenyanjing">陈眼镜火锅</string>
    <string-array name="nearby">
        <item>附近</item>
        <item>500米</item>
        <item>1000米</item>
        <item>2000米</item>
        <item>2000米之外</item>
    </string-array>
    <string-array name="ranking">
        <item>排序</item>
        <item>评价最高</item>
        <item>人气最高</item>
        <item>价格最高</item>
        <item>价格最低</item>
    </string-array>
    <string-array name="praise">
        <item>好评</item>
        <item></item>
        <item>500-1000米</item>
        <item>1000-1500米</item>
        <item>1500米以上</item>
    </string-array>
    <!--百度导航-->
    <string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
</resources>
