<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--顶部导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainRed"
        android:orientation="horizontal"
        android:focusableInTouchMode="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/home_sw_resize"
            android:text="@string/cq"
            android:textColor="@color/white"
            android:textSize="@dimen/font_40" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:background="@drawable/home_page_edittext"
            android:hint="@string/homepage_edittext"
            android:textSize="@dimen/font_32"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColorHint="@color/borderGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/weather"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_36" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/home_banner" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bgGrayWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_recommend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_recommend"
                    android:gravity="center_horizontal"
                    android:text="@string/tuijian"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_interaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_interaction"
                    android:gravity="center_horizontal"
                    android:text="@string/hudong"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_seek_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_seek_help"
                    android:gravity="center_horizontal"
                    android:text="@string/qiuzhu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_recreation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_recreation"
                    android:gravity="center_horizontal"
                    android:text="@string/yule"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_grogshop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_grogshop"
                    android:gravity="center_horizontal"
                    android:text="@string/jiudian"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_scenic_spots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_scenic_spots"
                    android:gravity="center_horizontal"
                    android:text="@string/jindian"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_shopping"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_shopping"
                    android:gravity="center_horizontal"
                    android:text="@string/gouwu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/home_park"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="12dp"
                    android:drawableTop="@mipmap/home_park"
                    android:gravity="center_horizontal"
                    android:text="@string/tingchechang"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bgGrayWhite" />
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:text="猜你喜欢"
                    android:textSize="14sp" />
            <ListView
                android:id="@+id/homepage_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
